--- a/Reviews/Reviews.csproj
+++ b/Reviews/Reviews.csproj
@@ -225,6 +225,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\stackreviews.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -248,6 +249,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\weather.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="stackreviews.png" />
     <Content Include="tasty.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
