--- a/Reviews/Reviews.csproj
+++ b/Reviews/Reviews.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\Reviews\Search.cshtml" />
     <Content Include="Views\User\Search.cshtml" />
     <Content Include="Views\Reviews\DetailsByTitle.cshtml" />
+    <Content Include="Views\User\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
