--- a/Reviews/Reviews.csproj
+++ b/Reviews/Reviews.csproj
@@ -210,6 +210,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Db\ApplicationDbContext.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
